feat (Tailwind) adding CSS framework

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,4 +1,6 @@
-*{
+/* Substituido pelo Tailwind CSS */
+
+/* *{
     box-sizing: border-box;
 }
 .navbar{
@@ -15,4 +17,4 @@ ul{
 }
 li{
     padding: 0px 5px;
-}
+} */
